# skill_project

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  config_back.json  freq_dictionary.map  freq_dictionaryTh.map  help.txt  inv.map  launch_back.json  param.txt  read_me_prepare.txt  requests.inf  requests.json  requests.txt  requests_back.txt  resfiles.inf  vrelidx.txt
include/: appparam.h  appparam_back.h  convjson.h  event.h  header.h  invertindex.h  multiply.h  myexception.h  search.h  server.h  service.h
resources/: file003.txt  file007.txt
resources_back/: file005.txt  file006.txt
resources_back2/: file023.txt  file024.txt
screens_img/: note.txt
src/: CMakeLists.txt  appparam.cpp  appparam_back.cpp  convjson.cpp  event.cpp  invertindex.cpp  main.cpp  maininstr.cpp  myexception.cpp  search.cpp  search_back.cpp  server.cpp  service.cpp
tests/: CMakeLists.txt  CMakeLists_back.txt  multiply.cpp  multiply_test.cpp  testapp.cpp
